@@ -12,10 +12,12 @@ texlive-luatex85 [platform:rpm]
 texlive-anyfontsize [platform:rpm]
 texlive-ctablestack [platform:rpm]
 texlive-gnu-freefont [platform:rpm]
+texlive-tex-gyre [platform:rpm]
 latexmk [platform:rpm]
 
 texlive-latex-recommended [platform:dpkg]
 texlive-fonts-recommended [platform:dpkg]
+tex-gyre [platform:dpkg]
 texlive-latex-extra [platform:dpkg]
 texlive-luatex [platform:dpkg]
 latexmk [platform:dpkg]
