@@ -6,6 +6,7 @@ Dependencies
 
 * Drop python 3.5 support
 * Drop docutils 0.12 and 0.13 support
+* LaTeX: add ``tex-gyre`` font dependency
 
 Incompatible changes
 --------------------
@@ -56,6 +57,8 @@ Bugs fixed
 * #8380: html search: Paragraphs in search results are not identified as ``<p>``
 * #8342: Emit a warning if a unknown domain is given for directive or role (ex.
   ``:unknown:doc:``)
+* #8711: LaTeX: backticks in code-blocks trigger latexpdf build warning (and font
+  change) with late TeXLive 2019
 
 Testing
 --------
